2015-12-29  Marcus Mueller <znek@mulle-kybernetik.com>

	* Source/NSUserNotification.m: "NSUserNotificationDefaultSoundName"
	constant string was declared but missing, fixed

2015-12-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLElement.m: For OSX compatibility, raise an exception
	it we attempt to insert an element which is already the child of
	some other element.

2015-11-30: Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSCalendar.h
	* Headers/Foundation/NSCalendar.h:
	Implement -components:fromDate:toDate:options:. (Not handling
	NSWrapCalendarComponents yet.)
	* Tests/base/NSCalendar/component-diff.m:
	Test case for new functionality.

2015-11-22 Riccardo Mottola <rm@gnu.org>

	* Source/NSFileManager.m (createDirectoryAtPath)
	Should return success even if all path components do exist,
	as by Apple spec.

2015-11-13 Riccardo Mottola <rm@gnu.org>

	* Source/NSRange.m: (NSRangeFromString)
	Parse length and location with scanInteger and not scanInt
	(suggested by Fred Kiefer to fix 64bit)

2015-11-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLElement.m: (insertChild:atIndex:) if the child already
	has a parent, detach from that before adding to the new parent.
	OSX compatibility fix.

2015-11-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLDocument.m: When libxml2 is not enabled, create a
	stub class which will raise an exception on instantiation.

2015-10-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Fix for fastpath code for literal string
	comparison which was ignoring the case insensititve option.
	Problems spotted by Fred, triggered by a Testplant change.

2015-10-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: remove declaration of unused methods.

2015-10-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSocketPortNameServer.m: Fix retain/release error causing
	crash on failure to launch gdomap.

2015-10-05 Niels Grewe <niels.grewe@halbordnung.de>
